Fixed node type button alignment in node search page

--- a/themes/Rozier/static/css/search/search.less
+++ b/themes/Rozier/static/css/search/search.less
@@ -24,7 +24,7 @@
 
 #nodeTypeForm_nodetypeSubmit{
     display: inline-block;  vertical-align: top;
-    margin:27px 0 0 10px;
+    margin:22px 0 0 10px;
 }
 
 
